syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
import "barber/barber_roles.proto";

option go_package = "barbershop/src/pb/barber";

message Barbers {
    string id = 1;
    int32 gender_id = 2;
    string email = 3;
    string phone = 4;
    string nick_name = 5;
    string full_name = 6;
    bool haircut = 7;
    string avatar_url = 8;
    bool work_status = 9;
}

message BarberEmployee{
    string phone = 1;
    string nick_name = 2;
    string full_name = 3;
}

message BarberDetail{
    Barbers barber = 1;
    BarberRoles barber_role = 2;
}

message BarberUpdate{
    string id = 1;
    optional int32 gender_id = 2;
    optional string email = 3;
    optional string phone = 4;
    optional string nickname = 5;
    optional string full_name = 6;
    optional bool haircut = 7;
    optional bool work_status = 8;
    optional string avatar_url = 9;
}