syntax = "proto3";

package pb;
import "barber/barbers.proto";

option go_package = "barbershop/src/pb/barber";

message UpdateBarberRequest {
    string id = 1;
    string barber_shop_id = 2;
    optional int32 gender_id = 3;
    optional string email = 4;
    optional string phone = 5;
    optional string nickname = 6;
    optional string full_name = 7;
    optional bool haircut = 8;
    optional bool work_status = 9;
    optional string avatar_url = 10;
}

message UpdateBarberResponse {
    Barbers barber = 1;
}
